--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nanoid": "^5.1.6",
     "next": "16.1.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
