--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@elysiajs/eden": "^1.4.5",
     "@tanstack/react-query": "^5.90.12",
     "elysia": "^1.4.19",
+    "lucide-react": "^0.562.0",
     "nanoid": "^5.1.6",
     "next": "16.1.0",
     "react": "19.2.3",
